<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_fullName"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/color_background"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_fullnameRegis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_background"
            android:fontFamily="@font/source_sans_pro_regular"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/color_background"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_fullName">

        <EditText
            android:id="@+id/edt_usernameRegis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_background"
            android:fontFamily="@font/source_sans_pro_regular"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/color_background"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_username">

        <EditText
            android:id="@+id/edt_emailRegis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_background"
            android:fontFamily="@font/source_sans_pro_regular"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_jabatan"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/color_background"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email">

        <EditText
            android:id="@+id/edt_jabatanRegis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_background"
            android:fontFamily="@font/source_sans_pro_regular"
            android:hint="@string/jabatan"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_unitKerja"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/color_background"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_jabatan">

        <EditText
            android:id="@+id/edt_unitRegis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_background"
            android:fontFamily="@font/source_sans_pro_regular"
            android:hint="@string/unit_kerja"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/color_background"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_unitKerja">

        <EditText
            android:id="@+id/edt_passwordRegis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_background"
            android:fontFamily="@font/source_sans_pro_regular"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_confrimPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/color_background"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_password">

        <EditText
            android:id="@+id/edt_confrimpassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_background"
            android:fontFamily="@font/source_sans_pro_regular"
            android:hint="@string/confrim_password"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_radius"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txt_confrimPassword">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>