<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <RelativeLayout
            android:id="@+id/lyt_login"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            android:elevation="3dp"
            android:background="@drawable/shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="9dp"
            app:boxBackgroundColor="@color/color_background"
            app:boxBackgroundMode="none">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:inputType="text"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/username"
                android:maxLines="1"
                android:lineSpacingExtra="0dp"
                android:backgroundTint="@color/color_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/greylist"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/avatar"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:passwordToggleEnabled="true"
            android:layout_below="@id/txt_username"
            app:boxBackgroundColor="@color/color_background"
            app:boxBackgroundMode="none">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/edt_username"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/color_background"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/password"
                android:maxLines="1"
                android:maxLength="6"
                android:inputType="numberPassword"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/greylist"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/padlock"
                android:layout_marginTop="110dp"
                android:layout_marginStart="20dp"/>

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_radius"
        android:clickable="true"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/lyt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyt_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:fontFamily="@font/source_sans_pro_regular"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/register"
            android:textColor="@color/color_utama"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>